<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TicXOToe</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="pos1_1">Position1_1</string>
    <string name="pos1_2">Position1_2</string>
    <string name="pos1_3">Position1_3</string>
    <string name="pos2_1">Position2_1</string>
    <string name="pos2_2">Position2_2</string>
    <string name="pos2_3">Position2_3</string>
    <string name="pos3_1">Position3_1</string>
    <string name="pos3_2">Position3_2</string>
    <string name="pos3_3">Position3_3</string>
    <string name="pos4_1">Position4_1</string>
    <string name="title_activity_my_main">Tic XO Toe</string>

</resources>